@@ -3,6 +3,7 @@ imGlossary v1.00 xxxx
 ===================================
 - Added: option to display 3 center blocks on index page or Search block
 - Added: option to display random term block on index or not
+- Added: options to select editor for admin and user side
 - Added: comment total in alt- and title tag of icon
 
 - Replaced: some icons
